[metadata]
name = eait-kvd-machauth
version = 1.0.0
author = Alex Wilson
author_email = alex@uq.edu.au
description = Python client for faKVD machine auth
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eait-itig/py-eait-kvd-machauth
project_urls =
    Bug Tracker = https://github.com/eait-itig/py-eait-kvd-machauth/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    typing_extensions; python_version<'3.8'

[options.packages.find]
where = src
